<resources>
    <string name="app_name">NotesProject</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications_volume">Notifications volume</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_sign_out">pref_sign_out</string>
    <string name="pref_volume_notifications">pref_volume_notifications</string>
    <string name="pref_notifications">pref_notifications</string>
    <string name="pref_change_password">pref_change_password</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>