<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_notifications"
        app:title="Notifications">

        <SeekBarPreference
            app:defaultValue="50"
            app:key="@string/pref_volume_notifications"
            app:showSeekBarValue="true"
            app:title="Volume" />

        <SwitchPreferenceCompat
            app:key="@string/pref_notifications"
            app:summaryOff="You will receive all notifications"
            app:summaryOn="You will not receive any notifications"
            app:title="Disable notifications" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_person"
        app:title="Profile">


        <Preference
            app:key="@string/pref_sign_out"
            app:summary="To sign in at another account"
            app:title="Sign out from the account" />


    </PreferenceCategory>



</PreferenceScreen>